fix fetch url mistakes from vibe coding